<resources>
    <string name="app_name">PM_VML_PR01</string>
    <string name="ingresar">Ingresar</string>
    <string name="ingresar2">¡Hola! Qué gusto verte de nuevo</string>
    <string name="email">Email</string>
    <string name="nombre">Nombre</string>
    <string name="con">Contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="emailEjemplo">ejemplo@gmail.com</string>
    <string name="digiteNom">Digite su nombre</string>
    <string name="digiteCor">Su dirección de correo electrónico</string>
    <string name="digiteCon">Digite una contraseña</string>
    <string name="cuenta">¿Tienes una cuenta?</string>
    <string name="terminos">Términos de Servicio</string>
    <string name="politica">Políticas de Privacidad</string>
    <string name="title_activity_ventana_inicio">ventanaInicio</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="inicio">Inicio</string>
    <string name="reportes">Reportes</string>
    <string name="clientes">Clientes</string>
    <string name="guias">Guías</string>
    <string name="productos">Productos</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="mostrarCorreo">correo</string>
    <string name="mostrarNombre">nombre</string>
</resources>